--- a/Test/test.ipynb
+++ b/Test/test.ipynb
@@ -34,6 +34,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with '.venv (Python 3.10.9)' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'c:/Users/ak3dbb2l/Documents/GitHub/streamlit-diary/.venv/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "import os.path\n",
+    "import pandas as pd\n",
+    "import streamlit as st\n",
+    "import mysql.connector\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "import plotly.express as px"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -139,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
